--- a/TestCouchbase3.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
+++ b/TestCouchbase3.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
@@ -2,9 +2,7 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>LastAccessedDate</key>
-	<date>2023-07-23T01:45:11Z</date>
-	<key>WorkspacePath</key>
-	<string>/Users/hyling/Documents/TestCouchbase3/TestCouchbase3.xcworkspace</string>
+	<key>IDEDidComputeMac32BitWarning</key>
+	<true/>
 </dict>
 </plist>
